--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NETFLIX Clone</title>
     <link rel="stylesheet" href="style/main.css">
-    <script src="https://kit.fontawesome.com/89344c73df.js" crossorigin="anonymous"></script>
+    
+    <!--css owl-->
+    <link rel="stylesheet" href="/style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="/style/owl/owl.theme.default.min.css">
 
 </head>
 <body>
@@ -27,7 +30,7 @@
            <div class="container">
                <h3 class="titulo">Loki</h3>
                <p class="descricao">Começando imediatamente depois que Loki rouba o Tesseract (de novo), ele se encontra diante da Autoridade de Variação Temporal, uma organização burocrática que existe fora do tempo e espaço. Forçado a responder por seus crimes contra a linha do tempo, ele recebe uma escolha: Ser deletado da realidade ou ajudar a capturar uma ameaça ainda maior.</p>
-           </div>
+           
            <div class="botoes">
             <button role="button" class="botao">
                 <i class="fas fa-play"></i>
@@ -37,8 +40,12 @@
                 <i class="fas fa-info-circle"></i>
                 MAIS INFORMAÇÕES
             </button>
-           </div>           
+           </div> 
+        </div>          
        </div>
    </main>
+   <script src="https://kit.fontawesome.com/89344c73df.js" crossorigin="anonymous"></script>
+   <script src="/js/owl/jquery.min.js"></script>
+   <script src="/js/owl/owl.carousel.min.js"></script>
 </body>
 </html>
