--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="/style/owl/owl.theme.default.min.css">
 
+    <!--responsividade-->
+    <link rel="stylesheet" href="/style/responsive.css">
+
+
 </head>
 <body>
    <header>
@@ -44,8 +48,55 @@
         </div>          
        </div>
    </main>
+
+   <div class="carrosel-filmes">
+       <div class="owl-carousel owl-theme">
+           <div class="item">
+               <img class="box-filme" src="/img/luca.jpg" alt="">
+           </div>
+           <div class="item">
+            <img class="box-filme" src="/img/lucifer.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/house.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/mr-robot.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/naruto2.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/smallville2.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/peakyblinders.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/pokemon.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/sexeducation.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/the7deadlysins.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/thebigbang.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/thesimpsons.jpg" alt="">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="/img/you.jpg" alt="">
+        </div>
+       </div>
+   </div>
+
+
    <script src="https://kit.fontawesome.com/89344c73df.js" crossorigin="anonymous"></script>
    <script src="/js/owl/jquery.min.js"></script>
    <script src="/js/owl/owl.carousel.min.js"></script>
+   <script src="/js/owl/setup.js"></script>
 </body>
 </html>
