--- a/halloween.html
+++ b/halloween.html
@@ -33,7 +33,7 @@
                     <i class="fas fa-spider"></i>
                 </button>
             </a>               
-               <a href="#">Início</a>
+               <a href="/main.html">Início</a>
                <a href="#">Séries</a>
                <a href="#">Filmes</a>
                <a href="#">Documentários</a>
@@ -44,18 +44,24 @@
    <main>
        <div class="filme-principal">
            <div class="container">
-               <h3 class="titulo">Annabelle 3: <br> De Volta para Casa</h3>
+               <h3 class="titulo">Annabelle 3: De Volta para Casa</h3>
                <p class="descricao">Determinados a impedir que Annabelle cause ainda mais estragos, os demonologistas Ed e Lorraine Warren levam a boneca possuída até a sala de artefatos em sua casa, colocando-a em "segurança" em um vidro sagrado e recorrendo à santa bênção de um padre. Mas, uma noite profana de terror os aguarda, pois Annabelle desperta os espíritos malignos da sala, que agora almejam um novo alvo: a filha de 10 anos do casal Warren, Judy, e seus amigos.</p>
            
            <div class="botoes">
+               <a href="https://www.youtube.com/watch?v=etiDmAF617E">
             <button role="button" class="botao">
                 <i class="fas fa-play"></i>
                 ASSISTIR AGORA
             </button>
+            </a>
+
+            <a href="https://www.adorocinema.com/filmes/filme-264422/">
             <button role="button" class="botao">
                 <i class="fas fa-info-circle"></i>
                 MAIS INFORMAÇÕES
             </button>
+            </a>
+            
            </div> 
         </div>          
        </div>
