--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-spider"></i>
                 </button>
             </a>               
-               <a href="#">Início</a>
+               <a href="/main.html">Início</a>
                <a href="#">Séries</a>
                <a href="#">Filmes</a>
                <a href="#">Documentários</a>
@@ -40,14 +40,18 @@
                <p class="descricao">Começando imediatamente depois que Loki rouba o Tesseract (de novo), ele se encontra diante da Autoridade de Variação Temporal, uma organização burocrática que existe fora do tempo e espaço. Forçado a responder por seus crimes contra a linha do tempo, ele recebe uma escolha: Ser deletado da realidade ou ajudar a capturar uma ameaça ainda maior.</p>
            
            <div class="botoes">
-            <button role="button" class="botao">
-                <i class="fas fa-play"></i>
-                ASSISTIR AGORA
-            </button>
-            <button role="button" class="botao">
-                <i class="fas fa-info-circle"></i>
-                MAIS INFORMAÇÕES
-            </button>
+               <a href="https://www.youtube.com/watch?v=xdBWrkcmMwU">
+                <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
+                    ASSISTIR AGORA
+                </button>   
+                </a>
+                <a href="https://www.adorocinema.com/series/serie-24172/">
+                    <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
+                    MAIS INFORMAÇÕES
+                </button>
+                </a>        
            </div> 
         </div>          
        </div>
